<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.AddEmployeeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/add_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_employee_name"
            android:layout_marginBottom="13dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employeeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords|textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_employee_lastName"
            android:layout_marginBottom="13dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employeeLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords|textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout3"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_employee_position"
            android:layout_marginBottom="24dp">
            <AutoCompleteTextView
                android:id="@+id/employeePosition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegisterEmployee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:text="@string/text_btn_add_employee"/>

    </LinearLayout>
    
    
</androidx.constraintlayout.widget.ConstraintLayout>