<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="45dp"
        android:background="@color/primary">
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/obrero_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:elevation="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title_dashboard"
            app:layout_constraintTop_toBottomOf="@id/imgView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/lastLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subtitle"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="15dp"
            android:textSize="19sp"
            android:textColor="#fff"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="-20dp"
        android:background="@drawable/menu_grid_background">
        <LinearLayout
            android:id="@+id/optionContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/viewEmployee"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:src="@drawable/users"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_view_position"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="-15dp"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/addEmployee"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/add_user"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_add_employee"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/optionContainer"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/addPosition"
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="32dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/add_position"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_add_position"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>